syntax = "proto3";

package game.v1;

import "common/v1/icon.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/game/v1;gamev1";

// EventService provides unified event listing with AIP-compliant pagination and filtering.
service EventService {
  // AppendEvent appends a new event to the campaign journal.
  rpc AppendEvent(AppendEventRequest) returns (AppendEventResponse);
  // ListEvents returns a paginated, filtered, and sorted list of events for a campaign.
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);
  // ListTimelineEntries returns a paginated timeline view for a campaign.
  rpc ListTimelineEntries(ListTimelineEntriesRequest) returns (ListTimelineEntriesResponse);
  // SubscribeCampaignUpdates streams campaign updates for realtime consumers.
  rpc SubscribeCampaignUpdates(SubscribeCampaignUpdatesRequest) returns (stream CampaignUpdate);
}

// ListEventsRequest describes the parameters for listing events.
message ListEventsRequest {
  // Required: scope to a campaign.
  string campaign_id = 1;

  // Page size (default: 50, max: 200).
  int32 page_size = 2;

  // Opaque cursor for pagination (base64 encoded).
  string page_token = 3;

  // Ordering: "seq" (default, oldest first) or "seq desc" (newest first).
  string order_by = 4;

  // AIP-160 filter expression.
  // Filterable fields: session_id, type, system_id, system_version, actor_type, actor_id, entity_type, entity_id, ts.
  // Examples:
  //   session_id = "sess_123"
  //   type = "action.roll_resolved"
  //   ts >= timestamp("2024-01-15T00:00:00Z")
  //   session_id = "sess_123" AND type = "action.outcome_applied"
  string filter = 5;

  // Returns only events with seq strictly greater than this value.
  uint64 after_seq = 6;
}

// ListEventsResponse contains the paginated event results.
message ListEventsResponse {
  // The events matching the request.
  repeated Event events = 1;

  // Token to retrieve the next page. Empty when no more results.
  string next_page_token = 2;

  // Token to retrieve the previous page. Empty when at the beginning.
  string previous_page_token = 3;

  // Total number of events matching the filter (across all pages).
  int32 total_size = 4;
}

// ListTimelineEntriesRequest describes the parameters for listing timeline entries.
message ListTimelineEntriesRequest {
  // Required: scope to a campaign.
  string campaign_id = 1;

  // Page size (default: 50, max: 200).
  int32 page_size = 2;

  // Opaque cursor for pagination (base64 encoded).
  string page_token = 3;

  // Ordering: "seq" (default, oldest first) or "seq desc" (newest first).
  string order_by = 4;

  // AIP-160 filter expression.
  // Filterable fields: session_id, type, system_id, system_version, actor_type, actor_id, entity_type, entity_id, ts.
  string filter = 5;
}

// ListTimelineEntriesResponse contains the paginated timeline results.
message ListTimelineEntriesResponse {
  // The timeline entries matching the request.
  repeated TimelineEntry entries = 1;

  // Token to retrieve the next page. Empty when no more results.
  string next_page_token = 2;

  // Token to retrieve the previous page. Empty when at the beginning.
  string previous_page_token = 3;

  // Total number of events matching the filter (across all pages).
  int32 total_size = 4;
}

// CampaignUpdateKind identifies which update types a subscription should receive.
enum CampaignUpdateKind {
  CAMPAIGN_UPDATE_KIND_UNSPECIFIED = 0;
  CAMPAIGN_UPDATE_KIND_EVENT_COMMITTED = 1;
  CAMPAIGN_UPDATE_KIND_PROJECTION_APPLIED = 2;
}

// SubscribeCampaignUpdatesRequest configures campaign update streaming.
message SubscribeCampaignUpdatesRequest {
  // Required campaign identifier.
  string campaign_id = 1;

  // Resume cursor: only updates with seq greater than this value are streamed.
  uint64 after_seq = 2;

  // Optional update-kind filter. When omitted, all update kinds are streamed.
  repeated CampaignUpdateKind kinds = 3;

  // Optional projection scope filter (for projection_applied updates only).
  // Typical values include: campaign_summary, campaign_participants,
  // campaign_sessions, campaign_characters, campaign_invites.
  repeated string projection_scopes = 4;

  // Optional stream polling interval in milliseconds.
  // Defaults to server value when omitted or non-positive.
  int32 poll_interval_ms = 5;
}

// CampaignUpdate carries one campaign update envelope.
message CampaignUpdate {
  // Campaign identifier.
  string campaign_id = 1;

  // Campaign event sequence associated with this update.
  uint64 seq = 2;

  // Event type associated with this update.
  string event_type = 3;

  // Event timestamp.
  google.protobuf.Timestamp event_time = 4;

  // Affected entity type (if provided by event envelope).
  string entity_type = 5;

  // Affected entity ID (if provided by event envelope).
  string entity_id = 6;

  oneof update {
    EventCommitted event_committed = 20;
    ProjectionApplied projection_applied = 21;
  }
}

// EventCommitted marks that an event was durably appended.
message EventCommitted {}

// ProjectionApplied marks that derived projection state is available for the source seq.
message ProjectionApplied {
  // Source event sequence that produced projection changes.
  uint64 source_seq = 1;

  // Projection scopes affected by this update.
  repeated string scopes = 2;
}

// TimelineEntry represents a timeline row with projection context.
message TimelineEntry {
  // The event sequence number within the campaign (starts at 1).
  uint64 seq = 1;

  // The type of event (e.g., "session.started", "action.roll_resolved").
  string event_type = 2;

  // When the event occurred.
  google.protobuf.Timestamp event_time = 3;

  // The icon identifier for this timeline entry.
  common.v1.IconId icon_id = 4;

  // Projection display data for rendering the entry.
  ProjectionDisplay projection = 5;

  // Event payload JSON for inspection.
  string event_payload_json = 6;
}

// ProjectionDisplay describes a projection summary for UI rendering.
message ProjectionDisplay {
  // Title for the projection (primary label).
  string title = 1;

  // Subtitle for the projection (secondary label).
  string subtitle = 2;

  // Status label for the projection.
  string status = 3;

  // Field/value pairs for projection detail.
  repeated ProjectionField fields = 4;
}

// ProjectionField is a display label/value pair.
message ProjectionField {
  string label = 1;
  string value = 2;
}

// AppendEventRequest describes the input for appending a new event.
message AppendEventRequest {
  // Required: scope to a campaign.
  string campaign_id = 1;

  // The type of event (e.g., "campaign.created", "story.added").
  string type = 2;

  // The session this event belongs to (optional).
  string session_id = 3;

  // Who triggered the event: "system", "participant", or "gm".
  string actor_type = 4;

  // The participant ID if actor_type is "participant" or "gm".
  string actor_id = 5;

  // The type of entity affected (e.g., "character", "session").
  string entity_type = 6;

  // The ID of the entity affected.
  string entity_id = 7;

  // Event-specific data as JSON.
  bytes payload_json = 8;
}

// AppendEventResponse contains the stored event.
message AppendEventResponse {
  Event event = 1;
}

// Event represents an immutable event in the unified event journal.
message Event {
  // The campaign this event belongs to.
  string campaign_id = 1;

  // The event sequence number within the campaign (starts at 1).
  uint64 seq = 2;

  // Content-addressed identity (SHA-256 truncated to 128-bit, hex encoded).
  string hash = 3;

  // When the event occurred.
  google.protobuf.Timestamp ts = 4;

  // The type of event (e.g., "session.started", "action.roll_resolved").
  string type = 5;

  // Game system identifier for system-specific events.
  string system_id = 6;

  // Game system version for system-specific events.
  string system_version = 7;

  // The session this event belongs to (empty for setup events).
  string session_id = 8;

  // Correlation ID for related events (e.g., roll request to resolution).
  string request_id = 9;

  // The MCP/gRPC invocation that triggered this event.
  string invocation_id = 10;

  // Who triggered the event: "system", "participant", or "gm".
  string actor_type = 11;

  // The participant ID if actor_type is "participant" or "gm".
  string actor_id = 12;

  // The type of entity affected (e.g., "character", "session").
  string entity_type = 13;

  // The ID of the entity affected.
  string entity_id = 14;

  // Event-specific data as JSON.
  bytes payload_json = 15;
}
